--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "helmet": "5.0.2",
     "jsonwebtoken": "8.5.1",
     "knex": "2.0.0",
-    "sqlite3": "^5.0.8"
+    "sqlite3": "5.0.8"
   },
   "devDependencies": {
     "@types/jest": "27.5.0",
